samples/_failures_safe/1761151306_6747d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6831fc3c.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_6831fc3c.c:158: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_6831fc3c.c:157:5: error: expected declaration or statement at end of input
  157 |     if
      |     ^~
